Fix carousel options visibility in table

--- a/app-ui/src/main/webapp/main/home/home.css
+++ b/app-ui/src/main/webapp/main/home/home.css
@@ -179,7 +179,7 @@ img.tool.broken {
 }
 
 .subscriptions .carousel-indicators {
-	bottom: -24px;
+	bottom: -22px;
 }
 
 .subscriptions .carousel-indicators .active {
